product page on mobile view fixed up

--- a/src/App.scss
+++ b/src/App.scss
@@ -598,7 +598,7 @@ ul{
     .featuresGrid{
         padding-top: 10vw;
         display: grid;       
-        grid-template-columns: 70%;
+        grid-template-columns: 90%;
         justify-content: center;
         text-align: center;
         column-gap: 0px;
@@ -823,7 +823,7 @@ min-height: auto
 }
 
 .mobileFeatureText{
-    width: 70%;
+    width: 90%;
     margin: 4vh auto;
 }
 
